[project]
name = "invoice-retriever"
version = "0.1.0"
description = "Use Playwright to retrieve invoices form selection of suppliers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []



# Don't allow non-wheel installs (no copile from source)
[tool.uv.pip]
# Alias for --only-binary :all:
no-build = true
