[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-retriever"
version = "0.1.0"
description = "Use Playwright to retrieve invoices form selection of suppliers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.23.0",
    "playwright>=1.58.0",
]

[project.scripts]
iret = "iret.cli:main"

[tool.setuptools.packages.find]
include = ["iret*"]



# Don't allow non-wheel installs (no copile from source)
[tool.uv.pip]
# Alias for --only-binary :all:
no-build = true
